fix(left-sidebar): add z-index for sticky header
Avoids icons showing on top.

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -80,6 +80,7 @@
 .left-sidebar__header {
   position: sticky;
   top: 0;
+  z-index: 1;
 
   padding-top: 0.5rem;
   padding-right: 0.5rem;
